<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TableRow>
            <TextView
                android:text="@string/ovlastenik"
                android:layout_weight="2"/>
            <TextView
                android:text="@string/year"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <Spinner

                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/spinner" />

            <EditText

                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/editYear"
                android:layout_weight="1" />

        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/date_from"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/date_to"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>

            <EditText
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/editDateFrom"
                android:focusable="false"
                android:clickable="true" />

            <EditText
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/editDateTo"
                android:focusable="false"
                android:clickable="true" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/days"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/work_days"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>

            <EditText
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/daysCount" />

            <EditText
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/workDaysCount" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/napomena"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editRemark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editMemo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zaključi "
            android:id="@+id/switchLock"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Spremi"
            android:id="@+id/buttonSave"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>